css/_navigation.css
.navigation-contacts {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 44px;

	z-index: 10;
}

.navigation-contacts__content {
	display: flex;
	height: 100%;
	align-items: center;
}

.navigation-contacts__phone { margin-left: auto; }

.navigation-contacts__location,
.navigation-contacts__phone {
	font-weight: 400;
}

.navigation-contacts__location i,
.navigation-contacts__phone i {
	color: #C5C6C6;
	margin-right: 8px;
	font-size: 1.2em;
}

.navigation-contacts__button {
    padding: 6px 12px; 
    font-size: 10px;
    font-weight: 400;
    background-color: white;
	border: solid 1px black;
	border-radius: 20px;
	margin-left: auto;

	display: none;
}


.navigation {
	position: fixed;
	top: 44px;
	left: 0;
	width: 100%;
	background-color: #1E1E1D;
	box-shadow: 0 9px 10px -4px rgba(0, 0, 0, 0.2);

	z-index: 10;
}
.navigation--fixed { transition: top .2s linear; }

.navigation__content {
	display: flex;
	align-items: center;
	justify-content: space-between;
	
	width: 1200px;
	height: 100%;
	margin: auto;
}

.navigation__main-page-link { display: flex; width: 120px; }

.navigation__logo { width: 100%; height: 100%; }

.navigation__item { position: relative; margin-right: 36px; }
.navigation__item:last-child { margin-right: 0; }

.navigation__list { display: flex; }

.navigation__link {
	font-size: 18px;
	font-weight: 400;
	color: white;

	display: block;
	padding-top: 15px;
	padding-bottom: 15px;
}

.navigation__arrow {
	position: relative;
	left: 4px;
	top: 2px;
	transition: transform .3s linear;
}
.navigation__arrow--active { transform: rotate(-180deg); }

.navigation-dropdown {
	position: absolute;
	top: 50px;
	left: -12px;
	
	max-height: 0;
	min-width: 168px;

	overflow: hidden;
}

.navigation-dropdown__content {
	background-color: #323231;
	box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
	border-radius: 5px;

	padding-top: 10px;
	padding-bottom: 10px;
}

.navigation-dropdown__link {
	color: white;
	font-weight: 400;
	padding: 12px 20px;

	display: block;
}
.navigation-dropdown__link:hover { background-color: #292927; }

.navigation__button {
    font-size: 18px;
    font-weight: 400;
    color: white;
    /*padding: 5.5px 18px; */
    padding: 6px 18px; 

    min-width: 160px;
	/*border: solid 1.5px white;*/
	border: solid 2px white;
	cursor: pointer;
    background-color: inherit;
	border-radius: 20px;

	transition: all .15s linear;
}
.navigation__button:hover { color: #323231; background-color: white; }

.navigation__hamburger {
	position: relative;
	right: -14px;
	display: none;
}

.navigation__hamburger svg {
	position: relative;
	width: 50px;  
	transform: translate3d(0px, 0px, 0px);  
}

svg:not(:root) { overflow: hidden; }

.navigation__hamburger path.top, .navigation__hamburger path.bottom {
    stroke-dasharray: 240px, 950px;
}

.navigation__hamburger path {
    fill: none; 
    stroke: #fff; 
    stroke-dashoffset: 0; 
    stroke-linecap: round; 
    stroke-width: 40px;
    transition: stroke-dashoffset .4s cubic-bezier(0.25, -0.25, 0.75, 1.25) 0s, 
    	stroke-dasharray .4s cubic-bezier(0.25, -0.25, 0.75, 1.25) 0s;
}

.navigation__hamburger path.middle { stroke-dasharray: 240px, 240px; }

.navigation__hamburger--active path.top, 
.navigation__hamburger--active path.bottom {
	stroke-dashoffset: -650px;
}

.navigation__hamburger path.top, .navigation__hamburger path.bottom {
    stroke-dasharray: 240px, 950px;
}

.navigation__hamburger--active path.middle {
    stroke-dasharray: 1px, 220px;
    stroke-dashoffset: -115px;
}

@media screen and (max-width: 1200px) 
{
	.navigation__content {
		width: 100%;
		padding-left: 64px;
		padding-right: 64px;
	}
}

@media screen and (max-width: 1100px) 
{
	.navigation__button { display: none; }
}

@media screen and (min-width: 901px) 
{
	.navigation__item:hover > .navigation-dropdown {
		max-height: 500px;
		padding: 4px 12px 12px 12px;
	}
}

@media screen and (max-width: 900px) 
{
	.navigation__content { 
		padding: 5px 0; 
		flex-wrap: wrap; 
		overflow: hidden;
	}
	
	.navigation__main-page-link { margin-left: 64px; }

	.navigation__list {
		width: 100%;
		max-height: 0;
		flex-direction: column;
		overflow: hidden;

		transition: max-height .45s linear;
	}
	.navigation__list--active { max-height: 600px; }

	.navigation__hamburger { 
		display: flex; 
		overflow: hidden;
		padding-right: 64px;
	}

	.navigation__item { margin-right: 0; }
	.navigation__item:first-child { margin-top: 12px; }

	.navigation__link { padding-left: 100px; padding-right: 64px; }

	.navigation__arrow { float: right; left: -4px; }

	.navigation-dropdown { 
		position: relative; 
		top: 0;
		left: 0;
		padding: 0;
	
		transition: max-height .3s linear;
	}
	.navigation-dropdown--active { max-height: 500px; }

	.navigation-dropdown__content {
		border-radius: 0;
		box-shadow: none;
		padding: 0;
	} 

	.navigation-dropdown__link { padding-left: calc(20px + 100px); }
}

@media screen and (max-width: 650px)
{
	.navigation-contacts__location, 
	.navigation-contacts__phone span {
		display: none;
	}

	.navigation-contacts__phone { margin-left: 0; } 

	.navigation-contacts__button { display: block; }
} 

@media screen and (max-width: 425px) 
{
	.navigation__main-page-link { margin-left: 12px; width: 90px; }

	.navigation__logo { object-fit: contain; }

	.navigation__hamburger { padding-right: 12px; }

	.navigation__link {
		padding-left: 36px;
		padding-right: 12px;
		font-size: 16px;
		font-weight: 300;
	}

	.navigation-dropdown__link {
		padding-left: 56px;
		font-size: 14px;
		font-weight: 300;
	}	
}

